add scripts and open api specs
