# src/Model/AirlineCompanyModel.php
@@ -3,6 +3,7 @@
 namespace App\Model;
 
 use App\Entity\AirlineCompany;
+use App\Repository\AirlineCompanyRepository;
 use Doctrine\ORM\EntityManagerInterface;
 
 class AirlineCompanyModel
@@ -13,10 +14,13 @@ class AirlineCompanyModel
 
     public $airlineCompany;
 
-    public function __construct(string $carrierName, string $headQuarters)
+    public $airlineCompanyId;
+
+    public function __construct(string $carrierName = null, string $headQuarters = null, int $airlineCompanyId = null)
     {
         $this->carrierName = $carrierName;
         $this->headQuarters = $headQuarters;
+        $this->airlineCompanyId = $airlineCompanyId;
     }
 
     public static function fromRequest($request)
@@ -26,6 +30,17 @@ class AirlineCompanyModel
         return new static(
             $request->carrierName,
             $request->headQuarters
+        );
+    }
+
+    public static function fromRequestUpdate($request, $airlineCompanyId)
+    {
+        $request = json_decode($request);
+
+        return new static(
+            $request->carrierName ?? null,
+            $request->headQuarters ?? null,
+            $airlineCompanyId
         );
     }
 
@@ -41,5 +56,10 @@ class AirlineCompanyModel
         $entityManagerInterface->flush();
 
         return $this->airlineCompany;
+    }
+
+    public function getAirlineCompany(AirlineCompanyRepository $airlineCompanyRepository)
+    {
+        return $airlineCompanyRepository->find($this->airlineCompanyId);
     }
 }
